--- a/Algorithms/Algorithms.vcxproj
+++ b/Algorithms/Algorithms.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BinarySearch.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="QuickSort.cpp" />
     <ClCompile Include="SelectionSort.cpp" />
